--- a/Report.tex
+++ b/Report.tex
@@ -28,6 +28,7 @@
 \newpage\input{./sections/Preprocess} %INCLUDES mesh,control,properties and ?
 \newpage\input{./sections/simulation} %to do!
 \newpage\input{./sections/postprocess} %to do!
+\newpage\input{./sections/difficulties} %to do!
 
 
 % BIBLIOGRAPHY
