Changes in mesh and fv schemes

--- a/sections/Control.tex
+++ b/sections/Control.tex
@@ -38,7 +38,7 @@ timePrecision   6;
 \end{verbatim}
 \end{footnotesize}
 
-\paragraph{}The \textit{runTimeModifiable} modifies the deltaT in each iteration to make possible for the solver to converge. Also, the maximum Courant number has been set to 2. Finally, the file that has been used to run the simulation is presented below.
+\paragraph{}The \textit{runTimeModifiable} modifies the deltaT in each iteration to make possible for the solver to converge. Finally, the file that has been used to run the simulation is presented below.
 
 \begin{footnotesize}
 \begin{verbatim}
@@ -94,3 +94,5 @@ maxCo           2;
 // ************************************************************************* //
 \end{verbatim}
 \end{footnotesize}
+
+\paragraph{}Notice that the Courant number has been set to 2.
