--- a/sections/difficulties.tex
+++ b/sections/difficulties.tex
@@ -1,3 +1,9 @@
 \section{Difficulties that we faced}
 
-\paragraph{}We have faced with several difficulties during the simulation of this case.
+\paragraph{}We have faced with several difficulties during the simulation of this case. First of all, our computers have not enough power to simulate this complicate case and some hypotheses have been taken to facilitate the simulationt. Furthermore, with the bootable in the USB we could not create a dense mesh and running the applicationd, therefore, we had to make a partition on the computer.
+
+\paragraph{}In relation to the mesh, we had several problems because some of the downloaded GrabCAD files presented construction errors and some parts of the stage studied were \textit{disjointed}. To solve this problem, a modification of the files in solidworks was necessary.
+
+\paragraph{}Another important aspect to highlight is that a turbofan is highly compressible but with the solvers used we suffered a lot of problems, which we unknowed, and they didn't allow us to get a correct simulation. In this situation, we decided to use a incompressible solver, \textit{pimpleDyMFoam}, in which we hadn't any error in the simulation.
+
+\paragraph{}
