everything half okay. PULL

--- a/ref/bibliography.bib
+++ b/ref/bibliography.bib
@@ -24,6 +24,15 @@ number = {April},
 title = {{PENN STATE The icoFoam “ Cavity Tutorial ”}},
 year = {2010}
 }
+@article{Penttinen2011,
+abstract = {This is a student project work, done as part of a course where OpenFOAM and some other OpenSource software are introduced to the students. Any reader should be aware that it might not be free of errors. Still, it might be useful for someone who would like learn some details similar to the ones presented in the report and in the accompanying files.},
+author = {Penttinen, Olle},
+file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quadrimestre/OpenSource CFD Optativa/Informe/elbicfdo/ref/anotherreference.pdf:pdf},
+journal = {Change},
+pages = {1--23},
+title = {{A pimpleFoam tutorial for channel flow, with respect to different LES models.}},
+year = {2011}
+}
 @article{Petit2011,
 author = {Petit, Olivier},
 file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quadrimestre/OpenSource CFD Optativa/Informe/elbicfdo/ref/mesh{\_}generation{\_}2013{\_}OP.pdf:pdf},
