--- a/sections/results.tex
+++ b/sections/results.tex
@@ -1,3 +1,15 @@
 \subsection{Analysis of the results}
 
-\paragraph{}\textbf{NO SE QUE ESCRIBO...TENGO SUEÑO}
+\paragraph{}In this section, there are going to be presented several graphs with the different parameters that have been obtained in the simulation of the case. The following plots are the results of all the commands that have been mentioned in the previous sections and are divided into two sections
+
+
+\subsubsection{Velocity}
+\subsubsubsection{Overall look}
+
+\subsubsubsection{Velocity in the x direction}
+
+\subsubsubsection{Velocity in the y direction}
+
+\subsubsubsection{Velocity in the z direction}
+
+\subsubsection{Pressure}
