--- a/sections/difficulties.tex
+++ b/sections/difficulties.tex
@@ -6,4 +6,4 @@
 
 \paragraph{}Another important aspect to highlight is that the flow that goes through a turbofan is highly compressible but we have assumed that it was an incompressible flow. The solvers used to simulate compressible flow are really difficult to work with and we could not find a solution to deal with it. So, when we faced this situation, we decided that the best way to proceed with the case was to use an incompressible solver (\textit{pimpleDyMFoam}).
 
-\paragraph{}The flow will not be very realistic with all the hypothesis made; however, it does show how the show behaves when it faces with the low pressure compression stage of a turbofan and the results, although not real, give a very good idea of what happens to the flow in terms of the velocity field.
+\paragraph{}The flow will not be very realistic with all the hypothesis made; however, it does show how the flow behaves when it faces with the low pressure compression stage of a turbofan and the results, although not real, give a very good idea of what happens to the flow in terms of the velocity field.
