--- a/sections/conclusions.tex
+++ b/sections/conclusions.tex
@@ -1,3 +1,4 @@
-\subsection{Conclusions}
+\subsection{Conclusions and Further work}
 
-\paragraph{}\textbf{NO SE QUE ESCRIBO...TENGO SUEÑO}
+\paragraph{}The objective of this course and, in particular, of this project is to get in touch with open-source CFD software and the other open-source applications related to it such as Salome.
+\paragraph{}We believe that this goal has been more than fullfilled by choosing a case as complex as the one discussed in this report whic includes things not viewed in the theory sessions such as the rotating meshes. In addition, as a side effect, we have also learned how to handle a operating system as Linux.
