--- a/sections/results.tex
+++ b/sections/results.tex
@@ -6,10 +6,92 @@
 \subsubsection{Velocity}
 \subsubsubsection{Overall look}
 
-\subsubsubsection{Velocity in the x direction}
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=0.25]{./img/screenshoots/U1.png}
+\caption{Total speed}
+\label{u1}
+\end{figure}
 
-\subsubsubsection{Velocity in the y direction}
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=0.3]{./img/screenshoots/U2.png}
+\caption{Total speed}
+\label{u2}
+\end{figure}
 
-\subsubsubsection{Velocity in the z direction}
 
-\subsubsection{Pressure}
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=0.3]{./img/screenshoots/U2bis.png}
+\caption{Detail of the total speed}
+\label{u2bis}
+\end{figure}
+
+
+\newpage\subsubsubsection{Velocity in the x direction}
+
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=0.28]{./img/screenshoots/Ux1.png}
+\caption{Speed in the x direction}
+\label{ux1}
+\end{figure}
+
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=0.28]{./img/screenshoots/Ux2.png}
+\caption{Speed in the x direction}
+\label{ux2}
+\end{figure}
+
+\newpage\subsubsubsection{Velocity in the y direction}
+
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=0.28]{./img/screenshoots/Uy1.png}
+\caption{Speed in the y direction}
+\label{uy1}
+\end{figure}
+
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=0.28]{./img/screenshoots/Uy2.png}
+\caption{Speed in the y direction}
+\label{uy2}
+\end{figure}
+
+\newpage\subsubsubsection{Velocity in the z direction}
+
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=0.28]{./img/screenshoots/Uz1.png}
+\caption{Speed in the z direction}
+\label{uz1}
+\end{figure}
+
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=0.28]{./img/screenshoots/Uz2.png}
+\caption{Speed in the z direction}
+\label{uz2}
+\end{figure}
+
+\newpage\subsubsection{Pressure}
+
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=0.28]{./img/screenshoots/p1.png}
+\caption{Pressure}
+\label{p1}
+\end{figure}
+
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=0.28]{./img/screenshoots/p2.png}
+\caption{Pressure}
+\label{p2}
+\end{figure}
+
+\newpage\subsubsection{Comments}
+
