--- a/sections/results.tex
+++ b/sections/results.tex
@@ -61,6 +61,13 @@
 \label{uy2}
 \end{figure}
 
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=0.28]{./img/screenshoots/Uy3.png}
+\caption{Stream lines in the y direction}
+\label{uy3}
+\end{figure}
+
 \newpage\subsubsubsection{Velocity in the z direction}
 
 \begin{figure}[h!]
@@ -94,4 +101,6 @@
 \end{figure}
 
 \newpage\subsubsection{Comments}
-
+\paragraph{}In the first three images can be seen how th velocity increases as the flow travels through the compressor region. This is the expected behaviour since the velocity has to increae along with the pressure to achieve the maximum efficiency in the combustion chamber. It can be also seen that the velocity in the external ring remains unperturbed. This is because, this region is situated rear the fan and it only experiences the low-compression produced due to the fan blades.
+\paragraph{}In the figures~\ref{ux1} and \ref{ux2} the distribution of the velocity in the X directon is shown. As one can simply see, the velcity does not change in its normal plane and the variation along the X direction is nearly the expected,achieving in the exit of this compression stage near $500 m/s$. 
+\paragraph{}The next four figures show the evolution of the velocity in the Y and Z directions. It can be seen that the field rotates. The angular velocity can be also computed. Finally, the last two figures show the pressure field.
