FINAL VERSION REPORT

--- a/sections/SchemesandSolution.tex
+++ b/sections/SchemesandSolution.tex
@@ -66,6 +66,7 @@ snGradSchemes
 \paragraph{}
 The \texttt{system/fvSolution} file contains the resolution methods and the tolerances for each equation, in our case, the relaxation factors have been odified to achieve a more stable convergence. Also, the number of PIMPLE iterations have been modified. The fvSolution file including all the changes done is the following:
 
+\pagebreak
 
 \begin{footnotesize}
 \begin{verbatim}
