--- a/sections/conclusions.tex
+++ b/sections/conclusions.tex
@@ -1,4 +1,11 @@
 \subsection{Conclusions and Further work}
 
-\paragraph{}The objective of this course and, in particular, of this project is to get in touch with open-source CFD software and the other open-source applications related to it such as Salome.
-\paragraph{}We believe that this goal has been more than fullfilled by choosing a case as complex as the one discussed in this report whic includes things not viewed in the theory sessions such as the rotating meshes. In addition, as a side effect, we have also learned how to handle a operating system as Linux.
+\paragraph{}The objective of this course and, in particular, of this project is to get in touch with \textit{open-source} CFD software and the other open-source applications related to it such as \textit{Salome}.
+
+\paragraph{}We believe that this goal has been more than fulfilled by choosing a case as complex as the one discussed in this report which includes things not viewed in the theory sessions such as the rotating meshes. In addition, as a side effect, we have also learned how to handle a operating system as Linux.
+
+\paragraph{}We have to say that we are very happy that we have chosen this course. We have learned a lots of stuff about \textit{OpenFOAM} that will be useful in our future career, for sure. In fact, it has made us more eager to learn new things about how to simulate new cases and we have read a lot of tutorials and watched a lot of videos in youtube.
+
+\paragraph{}But, now we have finished this report, we have a bittersweet taste. We do know that the turbine should be simulated with a solver capable of running simulations of compressible flow. However, we have faced some difficulties in the process and we have decided to perform the simulations with an incompressible flow solver. We would have preferred to work with another type of solver but we were not able to do that...
+
+\paragraph{}So, in conclusion, the development of this project and this course has been a very fulfilling experience that we would surely repeat if we had the chance. Now, we know what could be changed and what could have been done different in order to find a solution to work with a compressible flow solver. Besides this drawback, we are really happy with the report that we have done, since the behaviour of the flow is really interesting, and we think that it has made us more aware of the difficulties that the engineers have when running real case simulations with complex geometries.
